...
                    fontSize = 16.sp
                )

                IconButton(onClick = { nav.navigate("concertsList") }) {
                    Icon(
                        imageVector = Icons.Default.ArrowForward,
                        contentDescription = "Ver más conciertos",
                        tint = Color(0xFF5C0F1A)
                    )
                }
            }

            if (concerts.isEmpty()) {
...
