...
            // Botón CREAR
            item {
                Column(horizontalAlignment = Alignment.CenterHorizontally) {
                    Box(
                        modifier = Modifier
                            .size(55.dp)
                            .testTag("btnCrearComunidad")
                            .clip(CircleShape)
                            .background(Color(0xFF5C0F1A))
                            .clickable {
                                nav.navigate("createCommunity")
                            },
                        contentAlignment = Alignment.Center
...

        Spacer(modifier = Modifier.height(12.dp))

        OutlinedTextField(
            value = searchQuery,
            onValueChange = { searchQuery = it },
            placeholder = { Text("Buscar comunidad") },
            leadingIcon = {
                Icon(imageVector = Icons.Default.Search, contentDescription = "Buscar")
            },
            shape = RoundedCornerShape(20.dp),
            modifier = Modifier
                .fillMaxWidth()
...
